--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -7,17 +7,22 @@
 }
 
 body {
+  padding: 0;
+  margin: 0;
   background-color: $color1;
   color: $white;
   font-family: $font1;
-  font-size:18px;
-  line-height: 170%;
+  line-height: 180%;
   font-weight: 300;
   overflow: hidden;
 }
 
-h1 { font-size: 2.5em }
+h1 { font-size: 3.5em }
 
-h2 { font-size: 1.5em; font-weight: 100; }
+h2 { font-size: 3em; }
+
+h3 { font-size: 1.5em; }
+
+p { font-size: 18px; }
 
 i { font-size: 16px }
