--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -8,7 +8,7 @@
     justify-content: space-between;
     align-items: center;
     height: 100px;
-    padding: 0 3em;
+    padding: 0 3.5em;
     background: $color1;
 }
 
@@ -34,26 +34,30 @@
     width: 150px;
     display: flex;
     justify-content: flex-end;
+    color: $white;
 }
 
 .nav__menu--p {
     font-family: $font1;
     height: 20px;
     text-transform: uppercase;
-    font-size: .8em;
+    font-size: 90%;
     font-weight: 600;
     position: relative;
     transition: $animate1;
     cursor: pointer;
     display: flex;
     align-items: flex-end;
+    &:hover {
+        color: $color2;
+    }
 }
 
 .nav__menu--p::before {
     content: '';
     position: absolute;
     width: 57px;
-    height: 2px;
+    height: 1px;
     left: -82px;
     top: 5px;
     background: $white;
@@ -65,7 +69,7 @@
     transition: $animate1;
     position: absolute;
     width: 0px;
-    height: 2px;
+    height: 1px;
     left: -35px;
     top: 2px;
 }
@@ -75,10 +79,10 @@
         width: 20px;
         left: -35px;
         top: 7px;
-        background: $white;
+        background: $color2;
     }
     &::after {
         width: 20px;
-        background: $white;
+        background: $color2;
     }
 }
