--- a/src/css/swiper.scss
+++ b/src/css/swiper.scss
@@ -2,10 +2,12 @@
 
 .swiper {
     position: relative;
-    width: 100%;
+    width: 105%;
     height: 100%;
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: scroll;
     transform: scale(0.98);
+    scroll-behavior: smooth;
     will-change: transform;
     user-select: none;
     cursor: grab;
@@ -16,46 +18,85 @@
         transform: scale(1);
         cursor: grabbing;
     }
+    &::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); ; }
+    &::-webkit-scrollbar { width: 6px;  background-color: rgba(255,255,255,0.3); border: 6px solid $color1; }
+    &::-webkit-scrollbar-thumb {background-color: $color2; border: 6px solid $color1;  }
 }
 
 .swiper__item:first-child {
-    min-width: 600px;
-    margin-right: 3em;
-    padding: 0 3.5em;
-    color: $darkgray;
-    .swiper__intro-title {
-        color: $lightgray;
+    display: inline-block;
+    min-width: 550px;
+    padding: 0 6em 0 2em;
+    color: $lightgray;
+    .swiper__title {
+        font-weight: bold;
     }
-    .swiper__intro-subtitle {
-        color: $lightgray;
-        margin: -.6em 0 .5em 0;
+    .swiper__subtitle {
+        font-weight: 100;
+    }
+    .swiper__signature {
+        font-family: $font2;
+        font-size: 3em;
+    }
+    &:hover {
+        transform: scale(1);
+        margin: 0 1em;
     }
 }
 
 .swiper__item {
-    display: inline-block;
-    margin-right: 1em;
+    display: flex;
+    margin: 0 1em;
     align-items: center;
+    position: relative;
+    transition: $animate1; 
     img {
         max-height: 450px;
-        opacity: .8;
+        opacity: .85;
         filter: grayscale(1);
         transition: $animate1;
+        position: relative;
+    }
+    .swiper__item--title {
+        z-index: 2;
+        font-weight: bold;
+        margin: 0;
+        position: absolute;
+        right: 0;
+        transform: translateX(40%);
+        opacity: 0;
+        max-width: 200px;
+        line-height: 130%;
+        transition: $animate1;
+        &:before {
+            position: absolute;
+            content: '';
+            width: 40px;
+            height: 1px;
+            left: -20%;
+            top: 30%;
+            background: $color1;
+        }
     }
     &.active {
+        z-index: 2;
         background: rgba(255,255,255,0.3);
         cursor: grabbing;
         cursor: -webkit-grabbing;
         transform: scale(1);
     }
     &:hover {
+        z-index: 2;
+        transform: scale(1.1);
+        margin: 0 3em;
         img {
             filter: grayscale(0);
             opacity: 1;
         }
-    }
-    @media screen and (max-width: 500px) {
-        min-height: 200px;
-        min-width: 200px;
+        .swiper__item--title {
+            z-index: 2;
+            transform: translateX(60%);
+            opacity: 1;
+        }
     }
 }
