--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -26,3 +26,12 @@ h3 { font-size: 1.5em; }
 p { font-size: 18px; }
 
 i { font-size: 16px }
+
+.overlay {
+  position: absolute;
+  z-index: 999;
+  width: 100%;
+  height: 0%;
+  bottom: 0;
+  background: $color2;
+}
