--- a/src/css/swiper.scss
+++ b/src/css/swiper.scss
@@ -65,7 +65,7 @@
         right: 0;
         transform: translateX(40%);
         opacity: 0;
-        max-width: 200px;
+        max-width: 300px;
         line-height: 130%;
         transition: $animate1;
         &:before {
@@ -73,9 +73,12 @@
             content: '';
             width: 40px;
             height: 1px;
-            left: -20%;
-            top: 30%;
+            left: -55px;
+            top: 35px;
             background: $color1;
+        }
+        &:hover {
+            cursor: pointer;
         }
     }
     &.active {
