--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Mrs+Saint+Delafield&display=swap');
 
 $color1: #000;
-$color2: #e41143;
+$color2: #1e847f;
 $white: #fefefe;
 $lightgray: #939393;
 $darkgray: #6f6f6f;
