--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -35,3 +35,37 @@ i { font-size: 16px }
   bottom: 0;
   background: $color2;
 }
+
+.link-group {
+  display: flex;
+}
+
+.link {
+  font-weight: bold;
+  color: $lightgray;
+  position: relative;
+  z-index: 1;
+  transition: $animate1;
+  &::after {
+    content: '';
+    position: absolute;
+    top: 35px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: $color2;
+    transition: $animate1;
+  }
+  &.active {
+    color: $color2;
+    cursor: pointer;
+    &::after {
+      width: 0%;
+    }
+  }
+}
+
+.link-group__text {
+  padding: 0 1em;
+  margin: 0;
+}
