--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -26,18 +26,13 @@ h2 { font-size: 3em; }
 
 h3 { font-size: 1.5em; }
 
+h4 { font-size: 1em; }
+
+h5 { font-size: .8em; }
+
 p { font-size: 18px; }
 
 i { font-size: 16px }
-
-.overlay {
-  position: absolute;
-  z-index: 999;
-  width: 100%;
-  height: 0%;
-  bottom: 0;
-  background: $color2;
-}
 
 .link-group {
   display: flex;
