--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -2,14 +2,14 @@
 
 .nav {
     position: fixed;
-    z-index: 1;
+    z-index: 999;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100px;
     padding: 0 3.5em;
-    background: $color1;
+    background: transparent;
 }
 
 .nav__icons i {
