--- a/src/css/swiper.scss
+++ b/src/css/swiper.scss
@@ -66,7 +66,10 @@
         margin: 0 1em;
     }
     @media all and (max-width: $mobile) {
+        margin-top: -3em;
         width: 100vw;
+        height: 60vh;
+        padding: 0 3em;
     }
 }
 
