--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Mrs+Saint+Delafield&display=swap');
 
-$color1: #000;
+$color1: #191A1E;
 $color2: #1e847f;
 $white: #fefefe;
 $lightgray: #939393;
