--- a/src/css/project.scss
+++ b/src/css/project.scss
@@ -1,16 +1,17 @@
 @import './variables.scss';
 
 .project {
-    display: none;
+    display: none; // reset
     position: absolute;
     z-index: 3;
     width: 90%;
     left: 5%;
-    height: 0%;
+    height: 0%; // reset
     margin-bottom: 6em;
     bottom: 0;
     top: 100px;
-    background: $color2;
+    background: $white;
+    color: $color1;
     .project__wrapper {
         max-width: 1080px;
         margin: 0 auto;
@@ -32,12 +33,12 @@
 }
 
 .project__desc {
-    padding: 4em 4em 4em 0;
+    padding: 4em 2em 2em 0;
     display: flex;
     justify-content: space-between;
     .project__desc--left {
         width: 60%;
-        padding: 0 2em;
+        padding: 0 1em;
         @media all and (max-width: $mobile) {
             padding: 2em 2em 0 2em;
             width: 100%;
@@ -45,7 +46,7 @@
     }
     .project__desc--right {
         width: 40%;
-        padding: 0 4em;
+        padding: 0 1em;
         @media all and (max-width: $mobile) {
             padding: 0 2em 2em 2em;
             width: 100%;
@@ -56,8 +57,8 @@
         text-transform: uppercase;
         margin: 0;
         letter-spacing: 2px;
-        font-weight: 300;
-        color: $white;
+        font-weight: 500;
+        color: $color1;
     }
     .project__title {
         font-size: 1.9em;
@@ -65,7 +66,7 @@
     }
     .project__subtitle--content {
         margin: 0;
-        font-weight: 400;
+        font-weight: 500;
         letter-spacing: .5px;
     }
     .project__liner {
@@ -73,7 +74,47 @@
         width: 100%;
         height: .6px;
         background: $lightgray;
-        opacity: .5;
+        opacity: .2;
+    }
+    .project__btn-group {
+        display: flex;
+        width: 100%;
+        margin-top: 1em;
+    }
+    .project__btn {
+        font-weight: bold;
+        padding: .8em;
+        text-transform: uppercase;
+        border: 1px solid rgba(0, 0, 0, .2);
+        color: $color1;
+        text-decoration: none;
+        transition: $animate1;
+        position: relative;
+        font-size: 90%;
+        &:first-child {
+            margin-right: 1em;
+        }
+        &:after {
+            position: absolute;
+            left: 0;
+            top: 0;
+            content: '';
+            width: 0%;
+            height: 100%;
+            background: rgba(0,0,0,.1);
+            transition: $animate1;
+        }
+        &:hover {
+            font-weight: bold;
+            cursor: pointer;
+            background: $color2;
+            color: $white;
+            transform: translateX(2px) translateY(-2px);
+            border: 1px solid $color2;
+            &:after {
+                width: 100%;
+            }
+        }
     }
     .project__icon-link {
         padding-left: .5em;
@@ -89,9 +130,11 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 1em;
     justify-content: space-between;
+    background: #f5f5f5;
+    padding: 5em;
     .project__img {
         width: 100%;
-        height: auto;
+        max-height: 400px;
         @media all and (max-width: $mobile) {
             padding: 1em 2em;
         }
