--- a/src/css/swiper.scss
+++ b/src/css/swiper.scss
@@ -54,7 +54,7 @@
         padding-right: .5em;
         margin: 0;
     }
-    .swiper__subtitle {
+    .swiper__subTitle {
         font-weight: 100;
         margin: 0;
     }
