--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Mrs+Saint+Delafield&display=swap');
 
-$color1: #191A1E;
+$color1: #171219;
 $color2: #1e847f;
+$color3: #310D20;
 $white: #fefefe;
-$lightgray: #939393;
-$darkgray: #6f6f6f;
+$lightgray: #77878B;
 
 $font1: 'Roboto', sans-serif;
 $font2: 'Mrs Saint Delafield', cursive;
