--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -3,7 +3,6 @@
 
 $color1: #171219;
 $color2: #1e847f;
-$color3: #310D20;
 $white: #fefefe;
 $lightgray: #77878B;
 
@@ -11,5 +10,5 @@ $font1: 'Roboto', sans-serif;
 $font2: 'Mrs Saint Delafield', cursive;
 
 $animate1: 250ms all ease-in-out;
-
+$animate2: 350ms all ease;
 $mobile: '900px';
