--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -40,7 +40,7 @@ i { font-size: 16px }
 
 .link {
   font-weight: bold;
-  color: $lightgray;
+  color: $white;
   position: relative;
   z-index: 1;
   transition: $animate1;
