--- a/src/css/swiper.scss
+++ b/src/css/swiper.scss
@@ -2,7 +2,7 @@
 
 .swiper {
     position: relative;
-    width: 105%;
+    width: 100%;
     height: 100%;
     overflow-y: hidden;
     overflow-x: scroll;
@@ -14,6 +14,7 @@
     display: flex;
     align-items: center;
     transition: $animate1;
+    margin-right: 10%;
     &.active {
         transform: scale(1);
         cursor: grabbing;
@@ -65,13 +66,13 @@
     }
     &:hover {
         transform: scale(1);
-        margin: 0 1em;
     }
     @media all and (max-width: $mobile) {
         margin-top: -3em;
+        margin-bottom: 3em;
+        min-width: auto;
         width: 100vw;
-        height: 60vh;
-        padding: 0 3em;
+        padding: 0 1.6em;
     }
 }
 
@@ -95,6 +96,7 @@
     display: flex;
     margin: 0 1em;
     align-items: center;
+    justify-content: center;
     position: relative;
     transition: $animate1; 
     img {
@@ -111,8 +113,8 @@
         z-index: 2;
         font-weight: 500;
         margin: 0;
-        position: absolute;
         right: 0;
+        position: absolute;
         transform: translateX(40%);
         opacity: 0;
         max-width: 300px;
@@ -120,8 +122,9 @@
         transition: $animate1;
         color: $white;
         text-shadow: 2px 3px 5px rgba(0,0,0,0.1);
-        .swiper__title-icon {
-            font-size: 50%;
+        .swiper__item--subtitle{
+            font-size: 30%;
+            line-height: 1.5em;
             display: block;
             padding-top: .3em;
             transition: $animate1;
@@ -138,15 +141,12 @@
         &:hover {
             cursor: pointer;
             text-shadow: 2px 3px 5px rgba(0,0,0,0.3);
-            .swiper__title-icon {
-                transform: translateX(20px);
-            }
         }
         @media all and (max-width: $mobile) {
+            margin: auto;
+            right: auto;
             opacity: 1;
             text-align: center;
-            left: 1em;
-            bottom: 1em;
             transform: none;
             &:before {
                 content: none;
@@ -177,7 +177,6 @@
     &:hover {
         z-index: 2;
         transform: scale(1.1);
-        margin: 0 3em;
         img {
             filter: grayscale(0);
             opacity: .5;
