--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -9,7 +9,7 @@
     align-items: center;
     height: 80px;
     padding: 0 4em;
-    background: rgba($color1, .8);
+    background: $color1;
     @media all and (max-width: $mobile) {
         padding: 0 2em;
     }
