--- a/src/css/swiper.scss
+++ b/src/css/swiper.scss
@@ -2,7 +2,7 @@
 
 .swiper {
     position: relative;
-    width: 100%;
+    width: 101%;
     height: 100%;
     overflow-y: hidden;
     overflow-x: scroll;
@@ -19,7 +19,7 @@
         transform: scale(1);
         cursor: grabbing;
     }
-    &::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); ; }
+    &::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 6px $color1 ; }
     &::-webkit-scrollbar { width: 6px;  background-color: rgba(255,255,255,0.3); border: 6px solid $color1; }
     &::-webkit-scrollbar-thumb {background-color: $color2; border: 6px solid $color1;  }
     @media all and (max-width: $mobile) {
@@ -76,6 +76,13 @@
     }
 }
 
+.swiper__space {
+    border: 100px solid transparent;
+    @media all and (max-width: $mobile) {
+        display: none;
+    }
+}
+
 .swiper__item:nth-child(2) .swiper__holder { &:before { 
     background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
  }}
@@ -91,10 +98,21 @@
 .swiper__item:nth-child(6) .swiper__holder { &:before { 
     background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
 }}
-
+.swiper__item:nth-child(7) .swiper__holder { &:before { 
+    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+}}
+.swiper__item:nth-child(8) .swiper__holder { &:before { 
+    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+}}
+.swiper__item:nth-child(9) .swiper__holder { &:before { 
+    background-image: linear-gradient(to top, #88d3ce 0%, #6e45e2 100%);
+}}
+.swiper__item:nth-child(10) .swiper__holder { &:before { 
+    background-image: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%);
+}}
 .swiper__item {
     display: flex;
-    margin: 0 1em;
+    margin: 0 2em;
     align-items: center;
     justify-content: center;
     position: relative;
@@ -143,6 +161,8 @@
             text-shadow: 2px 3px 5px rgba(0,0,0,0.3);
         }
         @media all and (max-width: $mobile) {
+            max-width: 90vw;
+            font-size: 225%;
             margin: auto;
             right: auto;
             opacity: 1;
@@ -150,6 +170,9 @@
             transform: none;
             &:before {
                 content: none;
+            }
+            .swiper__item--subtitle{
+                font-size: 50%;
             }
         }
     }
@@ -176,7 +199,7 @@
     }
     &:hover {
         z-index: 2;
-        transform: scale(1.1);
+        transform: scale(1.05);
         img {
             filter: grayscale(0);
             opacity: .5;
